[package]
name = "f133"
authors = ["tao_eternal"]
version = "0.1.0"
repository = "https://github.com/tao-eternal/f133"
categories = ["embedded", "no-std"]
keywords = ["riscv", "f133", "f133-A", "d1", "d1s"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# panic-halt = "*" # we have ourselves' panic implemention
riscv = "0.7"
riscv-rt = "0.11"

[profile.release]
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
opt-level = 's'   # turn on maximum optimizations for size.
lto = true        # Link-time-optimizations for further size reduction
